--- a/templates/pkgs.html
+++ b/templates/pkgs.html
@@ -3,4 +3,5 @@
 	<td>{{size}}</td>
 	<td>{{last_update}}</td>
 	<td><a href="{{name}}.sig"><pre>{{name}}.sig</pre></a></td>
+	<td><a href="{{source_base_url}}/srcpkgs/{{name}}">Go to source</a></td>
 </tr>
