--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 	</style>
 </head>
 <body>
-<a href="..">Go back to previous page</a>
+<a href="{{repo_url}}">Check source repository</a>
 <hr>
 <h1>Available C standard libraries</h1>
 <table>
